--- a/css/components/benefits.scss
+++ b/css/components/benefits.scss
@@ -8,7 +8,7 @@
   position: relative;
 
   &:before {
-    content: url('../../img/decor/combined-shape.png');
+    content: url('../img/decor/combined-shape.png');
     position: absolute;
     top: 45px;
     right: 0;
