--- a/css/components/form.scss
+++ b/css/components/form.scss
@@ -63,7 +63,7 @@
       border-radius: 4px;
 
       &::before {
-        background: url('../../img/icons/checked.png') center center no-repeat;
+        background: url('../img/icons/checked.png') center center no-repeat;
       }
     }
   }
