--- a/css/components/hero.scss
+++ b/css/components/hero.scss
@@ -23,7 +23,7 @@
   justify-content: space-between;
   height: 100%;
   padding: 24px 0 65px;
-  background: url('../../img/headphones.png') right center / 55% auto no-repeat;
+  background: url('../img/headphones.png') right center / 55% auto no-repeat;
 }
 
 .hero__title-section {
