--- a/css/components/benefits.scss
+++ b/css/components/benefits.scss
@@ -1,5 +1,9 @@
 .benefits {
   display: flex;
+
+  @include phones {
+    flex-direction: column;
+  }
 }
 
 .benefits__item {
@@ -7,12 +11,24 @@
   padding: 0 4%;
   position: relative;
 
+  @include tablets {
+    padding: 0;
+  }
+
+  @include phones {
+    margin-bottom: rem(31px);
+  }
+
   &:before {
-    content: url('../img/decor/combined-shape.png');
+    content: url('../img/decor/combined-shape.svg');
     position: absolute;
-    top: 45px;
+    top: rem(45px);
     right: 0;
     transform: translateX(50%);
+
+    @include tablets {
+      display: none;
+    }
   }
 
   &:first-child {
@@ -30,35 +46,67 @@
 
 .benefit {
   text-align: center;
+
+  @include phones {
+    display: flex;
+    text-align: left;
+  }
+}
+
+.benefit__image {
+  margin-bottom: rem(17px);
+
+  @include tablets {
+    margin-bottom: rem(10px);
+  }
+  
+
+  @include phones {
+    margin-bottom: 0;
+    margin-right: rem(12px);
+  }
 }
 
 .benefit__image-wrapper {
   display: inline-block;
-  width: 128px;
-  height: 128px;
+  width: rem(128px);
+  height: rem(128px);
   position: relative;
   background: #F2F5F4;
   border-radius: 50%;
   overflow: hidden;
+  
 }
 
 .benefit__icon {
-  width: 60px;
-  height: 60px;
+  width: rem(60px);
+  height: rem(60px);
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+
+  @include phones {
+    top: 40%;
+  }
 }
 
 .benefit__title {
-  font-size: 24px;
-  line-height: 27px;
+  font-size: rem(24px);
+  line-height: rem(27px);
   font-weight: 700;
-  margin-bottom: 7px;
+  margin-bottom: rem(7px);
 }
 
 .benefit__desc {
   color: #666666;
-  line-height: 18px;
+  line-height: rem(18px);
+
+  @include tablets {
+    padding: 5% 5% 0;
+  }
+
+  @include phones {
+    padding: rem(6px) rem(20px) 0 0;
+  }
 }
