--- a/css/components/btn.scss
+++ b/css/components/btn.scss
@@ -1,13 +1,18 @@
 .btn {
+  cursor: pointer;
   font-weight: 700;
   line-height: 1.1;
-  padding: 18px 41px;
+  padding: rem(18px) rem(41px);
   text-transform: uppercase;
-  border-radius: 100px;
+  border-radius: rem(100px);
   background: $red;
   color: #fff;
   border: none;
   transition: .3s ease-in-out;
+
+  @include tablets {
+    padding: rem(21px) rem(41px);
+  }
 
   &:hover {
     background: #CA1B36;
