--- a/css/components/form.scss
+++ b/css/components/form.scss
@@ -1,24 +1,41 @@
 .form {
   display: flex;
+
+  @include tablets {
+    flex-direction: column;
+    padding: 0 17%;
+  }
+
+  @include phones {
+    padding: 0;
+  }
 }
 
 .form__col {
   flex: 1;
-  margin-right: 27px;
+  margin-right: rem(27px);
 
   &:last-child {
+    margin-right: 0;
+  }
+
+  @include tablets {
     margin-right: 0;
   }
 }
 
 .form__row {
   display: flex;
-  margin-bottom: 36px;
+  margin-bottom: rem(36px);
+
+  @include tablets {
+    margin-bottom: 14px;
+  }
 }
 
 .form__block {
   flex: 1;
-  margin-right: 17px;
+  margin-right: rem(17px);
 
   &:last-child {
     margin-right: 0;
@@ -27,17 +44,25 @@
 
 .form__input {
   width: 100%;
-  border: solid 3px transparent;
-  padding: 19px 12px;
-  border-radius: 4px;
+  border: solid rem(3px) transparent;
+  padding: rem(19px) rem(12px);
+  border-radius: rem(4px);
   font-family: 'Open Sans', sans-serif;
-  font-size: 14px;
+  font-size: rem(14px);
   color: #000;
   transition: .3s ease-in-out;
 
+  @include tablets {
+    padding: rem(10px) rem(8px);
+  }
+
   &--textarea {
-    height: 152px;
+    height: rem(152px);
     resize: none;
+
+    @include tablets {
+      height: rem(82px);
+    }
   }
 
   &:focus {
@@ -49,21 +74,29 @@
 .form__controls {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 19px;
+  margin-bottom: rem(19px);
+
+  @include phones {
+    justify-content: center;
+  }
 }
 
 .radio {
   display: flex;
   cursor: pointer;
   user-select: none;
-  margin-right: 16px;
+  margin-right: rem(16px);
+
+  @include phones {
+    margin-bottom: rem(10px);
+  }
 
   &--checkbox {
     .radio__visible {
-      border-radius: 4px;
+      border-radius: rem(4px);
 
       &::before {
-        background: url('../img/icons/checked.png') center center no-repeat;
+        background: url('../img/icons/checked.svg') center center no-repeat;
       }
     }
   }
@@ -80,17 +113,17 @@
 }
 
 .radio__visible {
-  width: 26px;
-  height: 26px;
+  width: rem(26px);
+  height: rem(26px);
   position: relative;
   border-radius: 50%;
   background: #fff;
-  margin-right: 10px;
+  margin-right: rem(10px);
   
   &:before {
     content: '';
-    width: 13px;
-    height: 13px;
+    width: rem(13px);
+    height: rem(13px);
     background: $red;
     border-radius: 50%;
     position: absolute;
@@ -102,5 +135,11 @@
 }
 
 .form__btns {
-  margin-top: 46px;
+  margin-top: rem(46px);
+
+  @include tablets {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
 }
