--- a/css/components/header.scss
+++ b/css/components/header.scss
@@ -1,31 +1,67 @@
 .header {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
+}
+
+.header__phone-number {
+  padding-top: rem(7px);
+}
+
+.phone-number.header__phone-number {
+  @include tablets {
+    display: none;
+  }
+}
+
+.menu {
+  padding-top: rem(10px);
+  margin: 0 rem(30px);
+  @include tablets {
+    display: none;
+  }
 }
 
 .menu__list {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   align-items: center;
-  font-size: 18px;
+  font-size: rem(18px);
   font-family: 'Alegreya Sans', sans-serif;
 }
 
+.menu__link {
+  white-space: nowrap;
+}
+
 .menu__item {
-  margin-right: 27px;
+  margin-bottom: rem(10px);
+  margin-right: rem(27px);
   &:last-child {
     margin-right: 0;
   }
 }
 
 .phone-number {
-  font-size: 18px;
+  font-size: rem(18px);
   display: flex;
   align-items: center;
 }
 
+.phone-number__icon {
+  flex-shrink: 0;
+}
+
 .phone-number__icon-elem {
-  width: 14px;
-  height: 14px;
-  margin-right: 6px;
+  color: #292929;
+  width: rem(14px);
+  height: rem(14px);
+  margin-right: rem(6px);
+  
+}
+
+
+.phone-number__text {
+  white-space: nowrap;
 }
