--- a/css/layout.scss
+++ b/css/layout.scss
@@ -1,10 +1,13 @@
+html {
+  font-size: $baseFontSize;
+}
+
 html,
 body {
   height: 100%;
 }
 
 body {
-  font-size: $baseFontSize;
   font-family: 'Play', sans-serif;
   line-height: 1.42;
   -webkit-font-smoothing: antialiased;
@@ -16,13 +19,13 @@ body {
 .wrapper {
   position: relative;
   width: 100%;
-  min-width: $containerWidth + 20px;
   min-height: 100%;
   overflow: hidden;
 }
 
 .container {
-  width: $containerWidth;
+  width: 95%;
+  max-width: $containerWidth;
   margin: 0 auto;
 }
 
