--- a/css/components/fixed-menu.scss
+++ b/css/components/fixed-menu.scss
@@ -3,10 +3,14 @@
   top: 38%;
   right: 3%;
   z-index: $z-fixed-menu;
+
+  @include tablets {
+    display: none;
+  }
 }
 
 .fixed-menu__item {
-  margin-bottom: 5px;
+  margin-bottom: rem(5px);
 
   &--acitve {
     .fixed-menu__link {
@@ -21,18 +25,18 @@
 }
 
 .fixed-menu__link {
-  width: 16px;
-  height: 16px;
+  width: rem(16px);
+  height: rem(16px);
   border-radius: 50%;
-  border: 1px solid transparent;
+  border: rem(1px) solid transparent;
   display: block;
   position: relative;
 
   &::before {
     content: '';
     display: block;
-    width: 6px;
-    height: 6px;
+    width: rem(6px);
+    height: rem(6px);
     border-radius: 50%;
     background: #292929;
     opacity: 0.6;
