--- a/css/components/hero.scss
+++ b/css/components/hero.scss
@@ -1,19 +1,23 @@
 .hero {
   background-color:#F5F5F5;
   height: 100vh;
-  min-height: 652px;
+  min-height: rem(652px);
   color: #292929;
   position: relative;
 
   &::before {
     content: '';
     position: absolute;
-    width: 46px;
-    height: 10px;
+    width: rem(46px);
+    height: rem(10px);
     background: #C4C4C4;
     transform: rotate(-45deg);
     bottom: 0;
     right: 27%;
+
+    @include tablets {
+      right: 10%;
+    }
   }
 }
 
@@ -22,27 +26,78 @@
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
-  padding: 24px 0 65px;
+  padding: rem(24px) 0 rem(65px);
   background: url('../img/headphones.png') right center / 55% auto no-repeat;
+
+  @include tablets {
+    background: none;
+  }
 }
 
 .hero__title-section {
   width: 45%;
+
+  @include tablets {
+    width: 100%;
+    flex: 1;
+    display: flex;flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    
+    &:before {
+      content: '';
+      width: rem(323px);
+      height: rem(323px);
+      background: url('../img/headphones.png') center center / contain no-repeat;
+      margin-bottom: rem(64px);
+    }
+  }
 }
 
 .hero__main-title {
-  font-size: 48px;
-  line-height: 52px;
+  font-size: rem(48px);
+  line-height: rem(52px);
   font-weight: 700;
-  margin-bottom: 22px;
+  margin-bottom: rem(22px);
   text-transform: uppercase;
+
+  @include tablets {
+    padding: 0 2%;
+    margin-bottom: rem(5px);
+  }
+
+  @include phones {
+    font-size: rem(32px);
+    line-height: rem(36px);
+    padding: 0 7%;
+  }
 }
 
 .hero__title-desc {
   font-family: 'Alegreya Sans', sans-serif;
-  font-size: 21px;
-  margin-bottom: 36px;
+  font-size: rem(21px);
+  line-height: rem(25px);
+  margin-bottom: rem(36px);
   padding-right: 20%;
+
+  @include tablets {
+    padding: 0 25%;
+    margin-bottom: rem(23px);
+  }
+
+  @include phones {
+    padding: 0 13%;
+    font-family: 'Play', sans-serif;
+    font-size: rem(18px);
+    line-height: rem(20px);
+  }
+}
+
+.hero__icons-section {
+  @include tablets {
+    display: none;
+  }
 }
 
 .features {
@@ -54,17 +109,18 @@
 }
 
 .features__item {
-  margin-right: 10px;
+  margin-right: rem(10px);
   &:last-child {
     margin-right: 0;
   }
 }
 
 .feature__icon {
-  width: 40px;
-  margin-right: 10px;
+  width: rem(40px);
+  height: rem(40px);
+  margin-right: rem(10px);
 }
 
 .feature__text {
-  max-width: 114px;
+  max-width: rem(114px);
 }
