--- a/css/components/interactive-avatar.scss
+++ b/css/components/interactive-avatar.scss
@@ -1,11 +1,16 @@
 .interactive-avatar {
-  width: 80px;
-  height: 80px;
-  border: 4px solid transparent;
+  width: rem(80px);
+  height: rem(80px);
+  border: rem(4px) solid transparent;
   border-radius: 50%;
   overflow: hidden;
   position: relative;
   transition: .3s ease-in-out;
+
+  @include phones {
+    width: rem(71px);
+    height: rem(71px);
+  }
 
   &--active {
     border-color: $red;
