--- a/css/main.scss
+++ b/css/main.scss
@@ -20,10 +20,12 @@ $z-fixed-menu: 100;
 @import "components/btn.scss";
 @import "components/section.scss";
 @import "components/benefits.scss";
+@import "components/slider.scss";
 @import "components/reviews.scss";
 @import "components/interactive-avatar.scss";
 @import "components/form.scss";
 @import "components/fixed-menu.scss";
 @import "components/hamburger.scss";
 @import "components/footer.scss";
+@import "components/fullscreen-menu.scss";
 
