--- a/css/components/slider.scss
+++ b/css/components/slider.scss
@@ -1,41 +1,22 @@
 .slider {
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
-  max-width: 974px;
 
   &__arrow {
     position: absolute;
     top: 50%;
     cursor: pointer;
 
-    @include tablets {
-      top: 17%;
-    }
-
     &--left {
       left: 0;
-
-      @include tablets {
-        left: 22%;
-      }
-
-      @include phones {
-        left: 5%;
-      }
     }
+      
 
     &--right {
       right: 0;
-
-      @include tablets {
-        right: 13%;
-      }
-
-      @include phones {
-        right: 5%;
-      }
     }
 
     &-img {
@@ -49,14 +30,35 @@
     position: relative;
     &-wrap {
       display: flex;
+      max-width: 95%;
+
+      @include tablets {
+        width: 100%;
+      }
     }
+  }
+
+  &__item {
+    align-items: center;
+  }
+}
+
+.slider__list-wrap {
+  position: relative;
+
+  .bx-wrapper {
+    margin-bottom: 0;
+    border: 0;
+    background: transparent;
+    box-shadow: none;
+    
   }
 }
 
 .slide {
   display: flex;
   justify-content: space-between;
-  margin-left: 10%;
+  
 
   @include tablets {
     flex-direction: column;
