--- a/css/main.scss
+++ b/css/main.scss
@@ -21,6 +21,7 @@ $z-fixed-menu: 100;
 @import "components/section.scss";
 @import "components/benefits.scss";
 @import "components/slider.scss";
+@import "components/team.scss";
 @import "components/reviews.scss";
 @import "components/interactive-avatar.scss";
 @import "components/form.scss";
@@ -28,4 +29,5 @@ $z-fixed-menu: 100;
 @import "components/hamburger.scss";
 @import "components/footer.scss";
 @import "components/fullscreen-menu.scss";
+@import "components/modal.scss";
 
