--- a/css/components/reviews.scss
+++ b/css/components/reviews.scss
@@ -12,7 +12,27 @@
   }
 }
 
-.reviews__display-inner {
+.reviews__list {
+  position: relative;
+  min-height: rem(264px);
+}
+
+.reviews__item {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  transition: .3s;
+  opacity: 0;
+}
+
+.reviews__item.active {
+  position: static;
+  opacity: 1;
+}
+
+.review {
   display: flex;
 
   @include tablets {
@@ -22,7 +42,7 @@
   }
 }
 
-.reviews__avatar {
+.review__avatar {
   width: rem(253px);
   height: rem(264px);
 
@@ -33,13 +53,13 @@
   }
 }
 
-.reviews__avatar-img {
+.review__avatar-img {
   object-fit: cover;
   width: 100%;
   height: 100%;
 }
 
-.reviews__content {
+.review__content {
   margin-left: rem(40px);
   flex: 1;
   display: flex;
@@ -51,14 +71,14 @@
   }
 }
 
-.reviews__title {
+.review__title {
   font-size: rem(24px);
   line-height: rem(27px);
   font-weight: 700;
   margin-bottom: rem(27px);
 }
 
-.reviews__text {
+.review__text {
   color: #666666;
   line-height: rem(19px);
   margin-bottom: rem(36px);
@@ -70,7 +90,7 @@
   }
 }
 
-.reviews__author {
+.review__author {
   font-size: rem(18px);
   font-weight: 700;
 }
